# KAppMan

./: LICENSE  README.md  pyproject.toml
kappman/: __init__.py  config.py  core.py  gui.py  main.py  watcher.py
kappman/autostart/: kappman-watcher.desktop
kappman/qml/: main.qml
kappman/themes/: breeze_dark.qss  catppuccin_latte.qss  catppuccin_macchiato.qss  catppuccin_mocha.qss
tests/: test_config.py  test_core.py
